# bevy_sky_gradient

./: Cargo.toml
examples/: fog.rs
src/: aurora.rs  aurora_material.rs  cycle.rs  lib.rs  plugin.rs  presets.rs  sky_texture.rs  utils.rs
src/clouds/: compute.rs  images.rs  mod.rs  render.rs  skybox.rs  uniforms.rs
src/clouds/shaders/: clouds.wgsl  clouds_compute.wgsl
